# smart-contract-test

./: README.md
BSC/: README.md
BSC/BSCScanAPI/: .env.sample  pyproject.toml  test.py
ERC20/: .env.sample  README.md  hardhat.config.ts  package-lock.json  package.json
ERC20/contracts/: Bank.sol  Token.sol
ERC20/doc/: ERC20.md
ERC20/scripts/: deploy.ts  slack.ts
ERC20/test/: Bank.js  token.test.ts
ERC20Permit/: README.md  hardhat.config.js  package-lock.json  package.json
ERC20Permit/contracts/: Bank.sol  CardeneToken.sol  IERC20Permit.sol
ERC20Permit/test/: bank-test.js
ERC721/ERC721A/: package-lock.json  package.json
ProxyPattern/: .env.example  README.md  hardhat.config.js  package-lock.json  package.json
ProxyPattern/.openzeppelin/: unknown-31337.json
ProxyPattern/contracts/: BeaconLogic.sol  BeaconLogicV2.sol  TransparentLogic.sol  TransparentLogicV2.sol  UUPSLogic.sol  UUPSLogicV2.sol
ProxyPattern/test/: test-beacon.js  test-transparent.js  test-uups.js
uniswapV2/: .env.example  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json  truffle-config.js
uniswapV2/contracts/: Uniswap.sol
uniswapV2/test/: config.js  test-uniswap.js  util.js
uniswapV3/: README.md  hardhat.config.js  package-lock.json  package.json
uniswapV3/contracts/: Swap.sol
uniswapV3/test/: Uniswap.js
upgradable/: .env.sample  .gitignore  README.md  package-lock.json  package.json
upgradable/contracts/: Greeter.sol  GreeterV2.sol
upgradable/doc/: result.md
upgradable/scripts/: greeter.js  greeterV2.js
(+4 files in other folders)
